--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,11 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Visual Studio C# .NET Project
+*.suo
+*.user
+_ReSharper.*
+bin
+obj
+packages
