--- a/MoqContainer/MoqInjectionContainer/MoqInjectionContainer.csproj
+++ b/MoqContainer/MoqInjectionContainer/MoqInjectionContainer.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{695DBF3A-8187-4F48-B1CB-EEE037EE2800}</ProjectGuid>
+    <ProjectGuid>{A8D854DE-482C-4F15-9BC7-FE8A8041580D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MoqContainerTests</RootNamespace>
-    <AssemblyName>MoqContainerTests</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>MoqInjectionContainer</RootNamespace>
+    <AssemblyName>MoqInjectionContainer</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,10 +35,6 @@
       <HintPath>..\packages\Moq.4.2.1510.2205\lib\net40\Moq.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="nunit.framework, Version=3.0.5797.27534, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.0.0\lib\net45\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,20 +45,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MoqqerTests.cs" />
-    <Compile Include="Helpers\IDepencyA.cs" />
-    <Compile Include="Helpers\IDepencyB.cs" />
+    <Compile Include="Moqqer.cs" />
+    <Compile Include="MoqqerException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Helpers\SomeClass.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="MoqContainer.nuspec" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MoqContainer\MoqContainer.csproj">
-      <Project>{A8D854DE-482C-4F15-9BC7-FE8A8041580D}</Project>
-      <Name>MoqContainer</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
